# telemetry

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONSIDERATIONS.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SPECIFICATION.md  manifest.json  pyproject.toml  schema.json  telemetry-event.json  telemetry-session.json
acp/: README.md  rfc.content_attribution.md
acp/changelog/unreleased/: content-attribution-extension.md
acp/examples/: combined_affiliate_and_content.json  create_checkout_with_attribution.json
acp/schemas/: content_attribution.json
server/: README.md  pyproject.toml
server/migrations/: 001_telemetry_schema.sql  002_content_url.sql
server/src/openattribution/: __init__.py
server/src/openattribution/telemetry_server/: __init__.py  config.py  database.py  main.py  models.py
server/src/openattribution/telemetry_server/routes/: __init__.py  events.py  internal.py  sessions.py
server/src/openattribution/telemetry_server/services/: __init__.py  events.py  sessions.py
server/tests/: conftest.py  test_events.py  test_sessions.py
src/openattribution/: __init__.py  client.py
src/openattribution/telemetry/: __init__.py  _transforms.py  acp.py  client.py  schema.py  ucp.py
tests/: README.md  __init__.py  test_acp.py  test_client.py  test_schema.py  test_ucp.py  validate.py
tests/invalid/: invalid-event-type.json  invalid-privacy-level.json  invalid-schema-version.json  invalid-source-role.json  manifest-bad-conformance-level.json  manifest-bad-role.json  manifest-missing-key-publickey.json  manifest-missing-operator.json  missing-event-timestamp.json  missing-event-type.json  missing-privacy-level.json  missing-schema-version.json  missing-session-id.json  missing-started-at.json  privacy-violation-ad-rendered-at-minimal.json  privacy-violation-query-at-intent.json  privacy-violation-query-at-minimal.json  standalone-missing-document-type.json  standalone-missing-event.json
tests/valid/: event-standalone-agent.json  event-standalone-edge-bot-client.json  event-standalone-edge.json  event-standalone-engaged-ctx-token.json  manifest-agent-with-keys.json  manifest-content-owner-full.json  manifest-content-owner-minimal.json  manifest-multi-role.json  session-attribution-tier.json  session-cached-grounding.json  session-custom-response-mode.json  session-funnel-exception-cited-no-grounded.json  session-funnel-exception-displayed-no-cited.json  session-grounding-tier.json  session-minimal.json  session-multi-turn.json  session-retrieval-tier.json  turn-privacy-full.json  turn-privacy-intent.json  turn-privacy-minimal.json  turn-privacy-summary.json
ts/: LICENSE  README.md  openattribution-telemetry-0.1.0.tgz  package-lock.json  package.json  tsconfig.json
ts/src/: acp.ts  client.ts  extract.ts  index.ts  mcp.ts  types.ts  ucp.ts
ts/src/__tests__/: extract.test.ts  mcp.test.ts
ucp/: ENHANCEMENT_PROPOSAL.md  EXTENSION.md  README.md  extension-schema.json  org.openattribution.telemetry.yaml
ucp/schemas/: telemetry.json
