[project]
name = "openattribution"
version = "0.1.0"
description = "Open standard and SDK for AI content attribution telemetry"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "NarrativAI", email = "hello@narrativai.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
]
keywords = ["attribution", "telemetry", "ai", "content"]
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.urls]
Homepage = "https://openattribution.org"
Documentation = "https://docs.openattribution.org"
Repository = "https://github.com/narrativai/openattribution"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openattribution"]
