[project]
name = "openattribution-telemetry-server"
version = "0.2.0"
description = "Reference server implementation for OpenAttribution Telemetry standard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "OpenAttribution", email = "hello@openattribution.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
keywords = ["attribution", "telemetry", "ai", "content", "openattribution", "server", "fastapi"]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "psycopg[binary,pool]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openattribution-telemetry>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://openattribution.org"
Documentation = "https://openattribution.org/telemetry"
Repository = "https://github.com/openattribution-org/telemetry"
Issues = "https://github.com/openattribution-org/telemetry/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openattribution"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
